syntax = "proto3";
package mail;

option go_package = "github.com/shaardie/mondane/mail";

message SendMailRequest {
    string recipient = 1;
    string subject = 2;
    string message = 3;
}

message SendMailResponse {}

service Mailer {
    rpc SendMail(SendMailRequest) returns (SendMailResponse) {}
};
