syntax = "proto3";
import "google/protobuf/empty.proto";
package mondane.user;

option go_package = "user/proto";

service UserService {
    // CRUD
    rpc Create(CreateUser) returns (ActivationToken) {}
    rpc Read(Id) returns (User) {}
    rpc Update(User) returns (User) {}
    rpc Delete(Id) returns (google.protobuf.Empty) {}

    rpc Activate(ActivationToken) returns (google.protobuf.Empty) {}
    rpc Auth(AuthUser) returns (Token) {}
    rpc ValidateToken(Token) returns (ValidatedToken) {}
}

message Id {
    int64 id = 1;
}

message CreateUser {
    string email = 2;
    string firstname = 3;
    string surname = 4;
    string password = 5;
}

message ActivationToken {
    string token = 2;
}

message User {
    int64 id = 1;
    string email = 2;
    string firstname = 3;
    string surname = 4;
    string password = 5;
}

message AuthUser {
    string email = 1;
    string password = 2;
}

message Token {
    string token = 1;
}

message ValidatedToken {
    User user = 2;
    bool valid = 3;
}
